分割投稿や成功時のステータス表示など

--- a/assets/css/base/_color.scss
+++ b/assets/css/base/_color.scss
@@ -2,7 +2,7 @@
 // Service Color
 $primary: #38A1F3;
 $secondary: #8fcdfc;
-$accent: #ebdd1c;
+$accent: #02af36;
 $error: #bd2525;
 
 $white: #fefefe;
