--- a/assets/css/base/_component.scss
+++ b/assets/css/base/_component.scss
@@ -28,6 +28,7 @@
 .s-textarea {
   @extend .__baseText;
   font-size: 1rem;
+  line-height: 1.6rem;
 
   display: flex;
   padding: 10px;
@@ -41,6 +42,10 @@
 
   &::placeholder {
     color: $gray-light-2;
+  }
+
+  &:disabled {
+    background: $gray-light-3;
   }
 }
 
